[metadata]
name = website-NekointheShell
version = 3
author = neko
author_email = neko@127.0.0.1
description = my personal website / blog / portfolio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NekointheShell/website.git
project_urls =
    Bug Tracker = https://github.com/NekointheShell/website/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

install_requires =
    pytest
    flask
    pyyaml
    markdown


[options.packages.find]
where = src


[tool:pytest]
testpaths =
    tests
